--- a/hw4/calendar.css
+++ b/hw4/calendar.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -9,6 +8,7 @@
     font-weight: 500;
     box-sizing: border-box;
     color: #FFFFFF;
+    font-size: 12px;
 }
 body{
     width: 100%;
@@ -137,10 +137,8 @@ button{
     line-height: 42px;
     text-align: center;
     color: #FFFFFF;
-    width:320px;
 }
 .aside-date__img{
-    width: 18px;
     height: 36px;
 }
 
@@ -157,45 +155,45 @@ button{
 .aside-date__list{
     margin-top: 45px;
     display: flex;
-    justify-content: space-between;
 }
 .aside-date-week{
-    width: 86px;
     text-align: center;
+    display: flex;
+    flex-basis: 14.285%;
 }
 .aside-date-week__link{
     font-size: 26px;
     line-height: 30px;
-    text-align: left;
+    text-align: center;
     mix-blend-mode: normal;
     opacity: 0.6;
+    justify-content: center;
 }
 
             /* main__list */
 .aside__main-list{
     margin-top: 45px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 .aside__main-list__element{
-    display: flex;
+    flex-basis: 14.285%;
+    padding: 10px;
+    margin-top: 10px;
+    /* display: flex;
+    justify-content: center; */
+}
+.aside__main-list__element:hover{
+    background-color: #3C82F9;
+    border-radius: 45%;
 }
 .aside__main-list__link{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 80px;
-    width: 86px;
     font-size: 29px;
     line-height: 34px;
-    color: #FFFFFF;
-    text-align: left;
-}
-.aside__main-list__link:hover{
-    border-radius: 60em;
-    background-color: #3C82F9;
-}
-.aside__main-list__link__opasity-style{
-    mix-blend-mode: normal;
-    opacity: 0.5;
+    /* padding-left: 0.7em;
+    padding-right: 0.7em; */
 }
 /* 3 колоночки в конце */
 .aside__categories{
@@ -215,11 +213,9 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
     border-radius: 12px;
     font-size: 22px;
     line-height: 26px;
-    position: relative;
 }
 .aside-wrapper__categories__finance{
     background-color:#8576ED;
